kled_derive/tests/ui/fails/subscription_is_not_a_type.rs
#[macro_use]
extern crate kled_derive;

#[operator(type = "flow", subscription = "struct Foo {}")]
pub struct Map<ItemOut, UnaryOp> {}

fn main() {}
