kled_derive/tests/ui/fails/subscription_is_not_a_type.stderr
error: `#[operator]` subscription must be a valid type
 --> $DIR/subscription_is_not_a_type.rs:4:42
  |
4 | #[operator(type = "flow", subscription = "struct Foo {}")]
  |                                          ^^^^^^^^^^^^^^^
